1306-MINIMUM-ABSOLUTE-DIFFERENCE Stats: Time: 23 ms (16.02%), Space: 63.9 MB (53.82%) - LeetHub